fix(browser support table): from cutting off rb-popover

--- a/src/client/styles/tables/api-table.scss
+++ b/src/client/styles/tables/api-table.scss
@@ -126,3 +126,11 @@ $textColors: (
 		&::after  { content: ')'; }
 	}
 }
+
+/* Browser Support Page
+ ***********************/
+.browser-support {
+	.responsive-table {
+		overflow-x: visible; // needed because auto cuts off popover
+	}
+}
